--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -256,6 +256,11 @@ spec:
                         field. By default, this will be automatically calculated and
                         set by the Operator.
                       type: string
+                    identityToken:
+                      description: 'Identity token to be passed to upstream. There are
+                        two types of tokens supported: `id_token` and `access_token`.
+                        Default value is `id_token`.'
+                      type: string
                     initialOpenShiftOAuthUser:
                       description: Deprecated. The value of this flag is ignored.
                         For operating with the OpenShift OAuth authentication, create
@@ -2289,6 +2294,11 @@ spec:
                           type: object
                         identityProviderURL:
                           description: Public URL of the Identity Provider server.
+                          type: string
+                        identityToken:
+                          description: 'Identity token to be passed to upstream.
+                            There are two types of tokens supported: `id_token` and
+                            `access_token`. Default value is `id_token`.'
                           type: string
                         oAuthClientName:
                           description: Name of the OpenShift `OAuthClient` resource
