--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -257,8 +257,8 @@ spec:
                         set by the Operator.
                       type: string
                     identityToken:
-                      description: 'Identity token to be passed to upstream. There are
-                        two types of tokens supported: `id_token` and `access_token`.
+                      description: 'Identity token to be passed to upstream. There
+                        are two types of tokens supported: `id_token` and `access_token`.
                         Default value is `id_token`.'
                       type: string
                     initialOpenShiftOAuthUser:
@@ -2296,9 +2296,9 @@ spec:
                           description: Public URL of the Identity Provider server.
                           type: string
                         identityToken:
-                          description: 'Identity token to be passed to upstream.
-                            There are two types of tokens supported: `id_token` and
-                            `access_token`. Default value is `id_token`.'
+                          description: 'Identity token to be passed to upstream. There
+                            are two types of tokens supported: `id_token` and `access_token`.
+                            Default value is `id_token`.'
                           type: string
                         oAuthClientName:
                           description: Name of the OpenShift `OAuthClient` resource
