--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -97,7 +97,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.50.0-566.next
+  name: eclipse-che-preview-openshift.v7.50.0-567.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -150,7 +150,7 @@ spec:
           - description: Che components configuration.
             displayName: Components
             path: components
-          - description: Networking, Che authentication and TLS configuration.
+          - description: Networking, Che authentication, and TLS configuration.
             displayName: Networking
             path: networking
           - description: Configuration of an alternative registry that stores Che
@@ -163,17 +163,17 @@ spec:
             path: chePhase
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: Public URL to the Che server.
+          - description: Public URL of the Che server.
             displayName: Eclipse Che URL
             path: cheURL
             x-descriptors:
               - urn:alm:descriptor:org.w3:link
-          - description: Current installed Che version.
+          - description: Currently installed Che version.
             displayName: 'displayName: Eclipse Che version'
             path: cheVersion
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: The public URL to the internal devfile registry.
+          - description: The public URL of the internal devfile registry.
             displayName: Devfile registry URL
             path: devfileRegistryURL
             x-descriptors:
@@ -184,12 +184,12 @@ spec:
             x-descriptors:
               - urn:alm:descriptor:text
           - description: A human readable message indicating details about why the
-              Che deployment is in current phase.
+              Che deployment is in the current phase.
             displayName: Message
             path: message
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: The public URL to the internal plug-in registry.
+          - description: The public URL of the internal plug-in registry.
             displayName: Plugin registry URL
             path: pluginRegistryURL
             x-descriptors:
@@ -200,7 +200,7 @@ spec:
             x-descriptors:
               - urn:alm:descriptor:text
           - description: A brief CamelCase message indicating details about why the
-              Che deployment is in current phase.
+              Che deployment is in the current phase.
             displayName: Reason
             path: reason
             x-descriptors:
@@ -1408,7 +1408,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.50.0-566.next
+  version: 7.50.0-567.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
