fix: deployment.container -> deployment.containers
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1257,8 +1257,8 @@ spec:
                       deployment:
                         description: Deployment override options.
                         properties:
-                          container:
-                            description: A single application container.
+                          containers:
+                            description: List of containers belonging to the pod.
                             items:
                               description: Container custom settings.
                               properties:
@@ -1401,8 +1401,8 @@ spec:
                       deployment:
                         description: Deployment override options.
                         properties:
-                          container:
-                            description: A single application container.
+                          containers:
+                            description: List of containers belonging to the pod.
                             items:
                               description: Container custom settings.
                               properties:
@@ -1507,8 +1507,8 @@ spec:
                       deployment:
                         description: Deployment override options.
                         properties:
-                          container:
-                            description: A single application container.
+                          containers:
+                            description: List of containers belonging to the pod.
                             items:
                               description: Container custom settings.
                               properties:
@@ -1634,8 +1634,8 @@ spec:
                       deployment:
                         description: Deployment override options.
                         properties:
-                          container:
-                            description: A single application container.
+                          containers:
+                            description: List of containers belonging to the pod.
                             items:
                               description: Container custom settings.
                               properties:
@@ -1727,8 +1727,8 @@ spec:
                       deployment:
                         description: Deployment override options.
                         properties:
-                          container:
-                            description: A single application container.
+                          containers:
+                            description: List of containers belonging to the pod.
                             items:
                               description: Container custom settings.
                               properties:
@@ -1890,8 +1890,8 @@ spec:
                       deployment:
                         description: Deployment override options.
                         properties:
-                          container:
-                            description: A single application container.
+                          containers:
+                            description: List of containers belonging to the pod.
                             items:
                               description: Container custom settings.
                               properties:
@@ -2144,8 +2144,8 @@ spec:
                               be distinguished in the configuration by their names:
                               - `gateway` - `configbump` - `oauth-proxy` - `kube-rbac-proxy`'
                             properties:
-                              container:
-                                description: A single application container.
+                              containers:
+                                description: List of containers belonging to the pod.
                                 items:
                                   description: Container custom settings.
                                   properties:
