resources check fix

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -237,7 +237,8 @@ spec:
                   identityToken:
                     description: 'Identity token to be passed to upstream. There are
                       two types of tokens supported: `id_token` and `access_token`.
-                      Default value is `id_token`.'
+                      Default value is `id_token`. This field is specific to Che installations
+                      made for Kubernetes only and ignored for OpenShift.'
                     type: string
                   initialOpenShiftOAuthUser:
                     description: Deprecated. The value of this flag is ignored. For
@@ -263,8 +264,8 @@ spec:
                       when left blank. See also the `OpenShiftoAuth` field.
                     type: string
                   oAuthScope:
-                    description: Access Token Scope. Ignored for OpenShift due to
-                      hardcoded value `user:full`.
+                    description: Access Token Scope. This field is specific to Che
+                      installations made for Kubernetes only and ignored for OpenShift.
                     type: string
                   oAuthSecret:
                     description: Name of the secret set in the OpenShift `OAuthClient`
@@ -2244,15 +2245,17 @@ spec:
                       identityToken:
                         description: 'Identity token to be passed to upstream. There
                           are two types of tokens supported: `id_token` and `access_token`.
-                          Default value is `id_token`.'
+                          Default value is `id_token`. This field is specific to Che
+                          installations made for Kubernetes only and ignored for OpenShift.'
                         type: string
                       oAuthClientName:
                         description: Name of the OpenShift `OAuthClient` resource
                           used to set up identity federation on the OpenShift side.
                         type: string
                       oAuthScope:
-                        description: Access Token Scope. Ignored for OpenShift due
-                          to hardcoded value `user:full`.
+                        description: Access Token Scope. This field is specific to
+                          Che installations made for Kubernetes only and ignored for
+                          OpenShift.
                         type: string
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient`
