--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1542,6 +1542,7 @@ spec:
                       type: object
                     database:
                       default:
+                        credentialsSecretName: postgres-credentials
                         externalDb: false
                         postgresDb: dbche
                         postgresHostName: postgres
@@ -1552,6 +1553,7 @@ spec:
                         used by the Che installation.
                       properties:
                         credentialsSecretName:
+                          default: postgres-credentials
                           description: The secret that contains PostgreSQL `user`
                             and `password` that the Che server uses to connect to
                             the database. The secret must have a `app.kubernetes.io/part-of=che.eclipse.org`
