resource validation fix plus code refactoring according to comments

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -2302,6 +2302,9 @@ spec:
                             Default value is `id_token`. This field is specific to
                             Che installations made for Kubernetes only and ignored
                             for OpenShift.'
+                          enum:
+                            - id_token
+                            - access_token
                           type: string
                         oAuthClientName:
                           description: Name of the OpenShift `OAuthClient` resource
