--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -55,10 +55,31 @@ metadata:
             "namespace": "eclipse-che"
           },
           "spec": {
-            "components": {},
-            "containerRegistry": {},
-            "devEnvironments": {},
-            "networking": {}
+            "components": {
+              "database": {
+                "externalDb": false
+              },
+              "metrics": {
+                "enable": true
+              }
+            },
+            "devEnvironments": {
+              "defaultNamespace": {
+                "template": "<username>-che"
+              },
+              "storage": {
+                "pvcStrategy": "common"
+              }
+            },
+            "networking": {
+              "auth": {
+                "identityProviderURL": "",
+                "oAuthClientName": "",
+                "oAuthSecret": ""
+              },
+              "domain": "",
+              "tlsSecretName": ""
+            }
           }
         }
       ]
@@ -76,7 +97,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.50.0-606.next
+  name: eclipse-che-preview-openshift.v7.50.0-569.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1387,7 +1408,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.50.0-606.next
+  version: 7.50.0-569.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
