--- a/.ci/openshift-ci/Dockerfile
+++ b/.ci/openshift-ci/Dockerfile
@@ -20,9 +20,8 @@ SHELL ["/bin/bash", "-c"]
 RUN yum install --assumeyes -d1 python3-pip  httpd-tools && \
     pip3 install --upgrade setuptools && \
     pip3 install yq && \
-    pip3 install operator-courier==2.1.7 && \
-    pip3 install pysemver && \
     curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && \
     chmod +x ./kubectl && \
     mv ./kubectl /usr/local/bin && \
+    ln -s /usr/bin/nodejs /usr/bin/node && \
     bash <(curl -sL https://www.eclipse.org/che/chectl/) --channel=next
