feat(oauth-proxy): configuration enhancements for k8s config (#1400)
* feat(oauth-proxy): configuration enhancements for k8s config

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -234,6 +234,12 @@ spec:
                       By default, this will be automatically calculated and set by
                       the Operator.
                     type: string
+                  identityToken:
+                    description: 'Identity token to be passed to upstream. There are
+                      two types of tokens supported: `id_token` and `access_token`.
+                      Default value is `id_token`. This field is specific to Che installations
+                      made for Kubernetes only and ignored for OpenShift.'
+                    type: string
                   initialOpenShiftOAuthUser:
                     description: Deprecated. The value of this flag is ignored. For
                       operating with the OpenShift OAuth authentication, create a
@@ -256,6 +262,10 @@ spec:
                     description: Name of the OpenShift `OAuthClient` resource used
                       to setup identity federation on the OpenShift side. Auto-generated
                       when left blank. See also the `OpenShiftoAuth` field.
+                    type: string
+                  oAuthScope:
+                    description: Access Token Scope. This field is specific to Che
+                      installations made for Kubernetes only and ignored for OpenShift.
                     type: string
                   oAuthSecret:
                     description: Name of the secret set in the OpenShift `OAuthClient`
@@ -2232,9 +2242,23 @@ spec:
                       identityProviderURL:
                         description: Public URL of the Identity Provider server.
                         type: string
+                      identityToken:
+                        description: 'Identity token to be passed to upstream. There
+                          are two types of tokens supported: `id_token` and `access_token`.
+                          Default value is `id_token`. This field is specific to Che
+                          installations made for Kubernetes only and ignored for OpenShift.'
+                        enum:
+                        - id_token
+                        - access_token
+                        type: string
                       oAuthClientName:
                         description: Name of the OpenShift `OAuthClient` resource
                           used to set up identity federation on the OpenShift side.
+                        type: string
+                      oAuthScope:
+                        description: Access Token Scope. This field is specific to
+                          Che installations made for Kubernetes only and ignored for
+                          OpenShift.
                         type: string
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient`
